--- a/forgot-reset-password/forgotpassword.html
+++ b/forgot-reset-password/forgotpassword.html
@@ -36,7 +36,7 @@
                 <!-- when publishing change the below button type to submit type -->
                 <input type="button" value="Submit" id="submitFPF"><br>
                 <br>
-                <span id="goBack"><a href="../index/index.html">Back To Login</a></span>
+                <span id="goBack"><a href="../login/index.html">Back To Login</a></span>
             </form>
         </div>
 
@@ -56,7 +56,7 @@
                 <!-- when publishing change the below button type to submit type -->
                 <input type="button" value="Submit" id="submitRPF"><br>
 
-                <span id="goBack"><a href="../index/index.html">Back To Login</a></span>
+                <span id="goBack"><a href="../login/index.html">Back To Login</a></span>
             </form>
         </div>
     </div>
