--- a/login/index.html
+++ b/login/index.html
@@ -40,9 +40,10 @@
             <span class="followUsText">Follow Us</span>
 
             <div class="socialMediaHandles">
-                <a href="#" id="linkedin"><img src="../images/l3.png" alt="linkedin logo" class="linkedin"></a>
-                <a href="#" id="facebook"><img src="../images/f3.png" alt="facebook logo" class="facebook"></a>
-                <a href="#" id="instagram"><img src="../images/ig3.png" alt="instagram logo" class="instagram"></a>
+                <!-- change links to monkley links during deployment -->
+                <a href="https://linkedin.com" id="linkedin"><img src="../images/linkedin.webp" alt="linkedin logo" class="linkedin"></a>
+                <a href="https://facebook.com" id="facebook"><img src="../images/facebook-removebg-preview.png" alt="facebook logo" class="facebook"></a>
+                <a href="https://instagram.com" id="instagram"><img src="../images/instagram-removebg-preview.png" alt="instagram logo" class="instagram"></a>
             </div>
         </div>
     </div>
